add control info sibling

--- a/tensorboard/plugins/graph_edit/tf_graph_edit_controls/tf-graph-edit-controls.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_controls/tf-graph-edit-controls.html
@@ -128,7 +128,7 @@ svg.icon {
   fill: #FFFFFF;
   cy: 10px;
 }
-.icon rect {
+.icon .rect1 {
   height: 14px;
   width: 35px;
   rx: 5px;
@@ -485,7 +485,7 @@ paper-dropdown-menu.save-model {
         <tr>
           <td>
             <svg class="icon">
-              <rect transform="translate(3, 1)" height="14" width="35"
+              <rect class="rect1" transform="translate(3, 1)" height="14" width="35"
                   rx="5" ry="5"/>
             </svg>
           </td>
@@ -570,6 +570,22 @@ paper-dropdown-menu.save-model {
             </div>
           </td>
         </tr>
+        <tr>
+          <td>
+            <svg class="icon">
+              <rect transform="translate(5, 5)" height="10" width="10" rx="2" ry="2" style="fill:white;stroke:#848484"></rect>
+            </svg>
+          </td>
+          <td>
+            Sibling
+            <div class="legend-clarifier">
+              <span>?</span>
+              <paper-tooltip animation-delay="0" position="right" offset="0">
+                XXXXXXXXXXXXXXXXX
+              </paper-tooltip>
+            </div>
+          </td>
+        </tr>`
         <tr>
           <td>
             <svg class="image-icon" viewBox="0 0 12 12" width="24" height="24">
