add Sibling edge symbol

--- a/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit-scene.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit-scene.html
@@ -275,6 +275,12 @@ limitations under the License.
   opacity: 1;
 }
 
+/* Sibling  Edge */
+::content .edge > path.edgeline.siblingedge {
+  stroke: #FFB74D;
+  opacity: 1;
+}
+
 /* --- Series Nodes --- */
 
 /* Hide the rect for a series' annotation. */
