--- a/tensorboard/plugins/graph_edit/tf_graph_edit_controls/tf-graph-edit-controls.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_controls/tf-graph-edit-controls.html
@@ -581,7 +581,7 @@ paper-dropdown-menu.save-model {
             <div class="legend-clarifier">
               <span>?</span>
               <paper-tooltip animation-delay="0" position="right" offset="0">
-                XXXXXXXXXXXXXXXXX
+                
               </paper-tooltip>
             </div>
           </td>
@@ -666,6 +666,24 @@ paper-dropdown-menu.save-model {
               <span>?</span>
               <paper-tooltip animation-delay="0" position="right" offset="0">
                 Edge showing that the outgoing operation node can mutate the incoming tensor.
+              </paper-tooltip>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <svg class="icon" height="15px"
+                preserveAspectRatio="xMinYMid meet" viewBox="0 0 15 15">
+              <path stroke="#FFB74D"
+                d="M2 9 l 29 0" stroke-linecap="round" stroke-dasharray="2, 2" />
+            </svg>
+          </td>
+          <td>
+            Sibling edge
+            <div class="legend-clarifier">
+              <span>?</span>
+              <paper-tooltip animation-delay="0" position="right" offset="0">
+                
               </paper-tooltip>
             </div>
           </td>
