--- a/tensorboard/plugins/inference/google_chart/google-chart-dist.html
+++ b/tensorboard/plugins/inference/google_chart/google-chart-dist.html
@@ -28,7 +28,7 @@ limitations under the License.
     <div id="demo-body" style = "width: 100%; height: 100%; margin: 0">
       <google-chart
         type="[[_type]]"
-        options='{"title":"demo","backgroundColor":"transparent"}'
+        options='{"title":"Distribution","backgroundColor":"transparent"}'
         data="[[data]]">
       </google-chart>
     </div>
