--- a/tensorboard/plugins/profile/google_chart/google-chart-dist.html
+++ b/tensorboard/plugins/profile/google_chart/google-chart-dist.html
@@ -3,11 +3,11 @@
 Copyright 2017 The TensorFlow Authors. All Rights Reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License. 
+you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
-
+ 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,34 +17,33 @@ limitations under the License.
 
 <link rel="import" href="google-chart.html">
 
-<dom-module id="google-chart-demo">
+<dom-module id="google-chart-dist">
   <template>
     <style>
-      code {
-        color: #007000;
-      }
-      google-chart {
-        height: 300px;
-        width: 400px;
-      }
+    google-chart{
+      width:100%;
+      height:100%;
+    }
     </style>
-    <div id="demo-body">
-      <p>Website traffic data by country from an external JSON resource where
-         the data is in raw DataTable format.</p>
-      <google-chart type="column"
-       options='{"title": "Visitors by Country", "legend": "none"}'
-       data="[[_data]]">
+    <div id="demo-body" style = "width: 100%; height: 100%; margin: 0">
+      <google-chart
+        type="[[_type]]"
+        options='{"title":"demo","backgroundColor":"transparent"}'
+        data="[[data]]">
       </google-chart>
     </div>
   </template>
 
   <script>
   Polymer({
-    is: 'google-chart-demo',
+    is: 'google-chart-dist',
     properties: {
-      _data: {
+      data: {
         type: Object,
-        observer: '_updateView',
+      },
+      _type: {
+        type: String,
+        value:"column",
       },
     },
   });
