--- a/tensorboard/plugins/profile/google_chart/google-chart-loader.html
+++ b/tensorboard/plugins/profile/google_chart/google-chart-loader.html
@@ -16,6 +16,7 @@ limitations under the License.
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../tf-imports/loaderjs.html">
 
 <script>
 (function() {
