--- a/tensorboard/plugins/profile/google_chart/google-chart-styles.html
+++ b/tensorboard/plugins/profile/google_chart/google-chart-styles.html
@@ -9,7 +9,7 @@ You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
+distributed under the License is distributed on an "AS IS" BASIS, 
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
@@ -24,16 +24,17 @@ limitations under the License.
         display: flex;
         margin: 0;
         padding: 0;
-        width: 400px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
       }
 
       :host([type="gauge"]) {
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
       }
 
       #chartdiv {
+        height: 100%;
         width: 100%;
       }
     </style>
