--- a/tensorboard/plugins/profile/google_chart/google-chart.html
+++ b/tensorboard/plugins/profile/google_chart/google-chart.html
@@ -16,6 +16,7 @@ limitations under the License.
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../tf-imports/loaderjs.html">
 <link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="google-chart-loader.html">
 <link rel="import" href="google-chart-styles.html">
@@ -485,13 +486,6 @@ on the `html` tag of your document.
         .then(function(dataView) {
           this._dataView = dataView;
         }.bind(this));
-    },
-
-    attached: function() {
-      var url = "https://www.gstatic.com/charts/loader.js";
-      var script = document.createElement('script');
-      script.src = url;
-      document.head.appendChild(script);
     },
 
   });
