--- a/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
@@ -276,14 +276,14 @@ TensorFlow run.
           <div class="edit-log with-border">
             <div style="margin-left: 10px;margin-top:10px;">
               <div class="flex-horizontal" style="margin-bottom: 10px;">
-                  <div class="log-title" style="width: 120px">time</div>
+                  <div class="log-title" style="width: 200px">time</div>
                   <div class="log-title" style="width: 270px">data point</div>
                   <div class="log-title" style="width: 120px">old value</div>
                   <div class="log-title" style="border-right: 0px solid;width: 120px">new value</div>
               </div>
               <template is="dom-repeat" items="{{log}}">
                 <div class="flex-horizontal" style="margin-bottom: 5px;">
-                  <div class="log-content" style="width: 120px;" id="model">[[item.time]]</div>
+                  <div class="log-content" style="width: 200px;" id="model">[[item.time]]</div>
                   <div class="log-content" style="width: 60px;" id="model">[[item.1]]</div>
                   <iron-icon icon="icons:remove" class="separator2"></iron-icon>
                   <div class="log-content" style="width: 60px;" id="model">[[item.2]]</div>
@@ -349,7 +349,7 @@ TensorFlow run.
         border: none
       }
       .hr2 {
-        width: 633px;
+        width: 713px;
         margin-left: 0px;
         background-color: #bbbbbb;
         height: 1px;
@@ -601,7 +601,7 @@ TensorFlow run.
         },
         log:{
           type: Array,
-          value: [{1:1,2:2,3:3,4:4,old:8,new:10,time:'10s'}]
+          value: [{1:1,2:2,3:3,4:4,old:8,new:10,time:'2019-09-14 16:57:58.445542'}]
         },
         _selectedPage:{
           type: Number,
